# WowGuildExport

./: Makefile  README.md  airflow.db  docker-compose.yaml  pyproject.toml  sample.env
airflow-data/: airflow.cfg
api/: guild.py  utils.py
dags/wowexport/: activity.py  main.py  player.py
dags/wowexport/blizzard/: activity.py  guild.py  player.py  utils.py
dags/wowexport/warcraftlogs/: guild.py  utils.py
database/alembic/: env.py
database/alembic/versions/: 07fe4b3d62e6_character_activity_and_equipment_table.py
database/models/: __init__.py  activities.py  character.py  character_equipments.py
