[tool.poetry]
name = "wowguildexport"
version = "0.1.0"
description = "An utils to use the wow api"
authors = ["Armand \"Skengrek\" Massé <armand.masse69@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
